2006-02-21  Jeremy C. Reed  <reed@reedmedia.net>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:

	Update to build against Mesa HEAD.

2006-02-20  Ian Romanick  <idr@us.ibm.com>

	* hw/xfree86/os-support/bus/Pci.c: (handlePciBIOS), (readPciBios),
	(HandlePciBios), (xf86ReadPciBIOS):
	* hw/xfree86/os-support/bus/xf86Pci.h:

	Eliminate unused PCI BIOS reading functionality.  The old code
	used several function pointers to implement a level of
	flexability that was never used.  The code also had unused
	support for extracting a single image type from a larger
	expansion ROM. 

	Fix the spelling of PCI_BIOS_OPEN_FIRMWARE.

	Fix a couple errors in #ifdef debug code.

2006-02-20  Ian Romanick  <idr@us.ibm.com>

	* hw/xfree86/common/xf86pciBus.c: (FindPCIVideoInfo),
	(xf86GetPciRes):
	* hw/xfree86/common/xf86str.h:
	* hw/xfree86/os-support/bus/xf86Pci.h:
	* hw/xfree86/scanpci/xf86PciData.h:
	* hw/xfree86/scanpci/xf86ScanPci.c:
	Eliminate all the code for querying the PCI class from the PCI
	ID database.  Class information is not, and never has been,
	stored there.  Therefore, this is just a bunch of elaborate
	code to read 0x00000000. 


2006-02-21  Adam Jackson  <ajax@freedesktop.org>

	* Xi/allowev.c:
	* Xi/chgdctl.c:
	* Xi/chgfctl.c:
	* Xi/chgkbd.c:
	* Xi/chgkmap.c:
	* Xi/chgprop.c:
	* Xi/chgptr.c:
	* Xi/closedev.c:
	* Xi/devbell.c:
	* Xi/exevents.c:
	* Xi/extinit.c:
	* Xi/getbmap.c:
	* Xi/getdctl.c:
	* Xi/getfctl.c:
	* Xi/getfocus.c:
	* Xi/getkmap.c:
	* Xi/getmmap.c:
	* Xi/getprop.c:
	* Xi/getselev.c:
	* Xi/getvers.c:
	* Xi/grabdev.c:
	* Xi/grabdevb.c:
	* Xi/grabdevk.c:
	* Xi/gtmotion.c:
	* Xi/listdev.c:
	* Xi/opendev.c:
	* Xi/queryst.c:
	* Xi/selectev.c:
	* Xi/sendexev.c:
	* Xi/setbmap.c:
	* Xi/setdval.c:
	* Xi/setfocus.c:
	* Xi/setmmap.c:
	* Xi/setmode.c:
	* Xi/stubs.c:
	* Xi/ungrdev.c:
	* Xi/ungrdevb.c:
	* Xi/ungrdevk.c:
	ANSIfy Xi/.  Mostly automated via protoize(1).

	* Xi/*.[ch]:
	indent fixes (OMG SO UGLY), and nuke old RCS keywords.
